[package]
name = "token-manager"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_manager"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = {version = "0.30.1", features = ["interface-instructions"]}
anchor-spl = {version = "0.30.1", features = ["token_2022"]}
spl-transfer-hook-interface = "0.6.5"
spl-tlv-account-resolution = "0.6.5"
spl-pod = "0.2.0"
spl-token-2022 = {version="3.0.5", features = ["no-entrypoint"]}
spl-token-metadata-interface = "0.3.5"
